# recs

./: .clangd  CMakeLists.txt  readme.md
.zed/: settings.json  tasks.json
include/recs/: CMakeLists.txt  access.hpp  accesses_types.hpp  component_mask.hpp  component_storage.hpp  concepts.hpp  entity_id.hpp  inline.hpp  naive_access.hpp  naive_component_storage.hpp  scheduler.hpp  type_id.hpp
scripts/: cmake.bat  generate_compile_commands.bat  generate_compile_commands.sh  msbuild.bat  ninja.sh
src/: CMakeLists.txt  component_storage.cpp  naive_component_storage.cpp  scheduler.cpp  type_id.cpp
tests/: CMakeLists.txt  access.cpp  component_mask.cpp  component_storage.cpp  naive_access.cpp  naive_component_storage.cpp  scheduler.cpp
